[build-system]
requires = ["setuptools>=61.0", "scikit-image>=0.19.2", "scikit-learn", "numpy", "scipy", "matplotlib", "joblib", "poppy", 	"PyCustomFocus", "h5py", "statsmodels", "tqdm"]
build-backend = "setuptools.build_meta"

[project]
name = "brighteyes-ism"
version = "0.1.0"
authors = [
  { name="Alessandro Zunino", email="alessandro.zunino@iit.it" },
]
description = "A toolbox for analysing and simulating ISM images"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
"Homepage" = "https://github.com/VicidominiLab/brighteyes-ism"
"Documentation" = "https://brighteyes-ism.readthedocs.io"
