[metadata]
name = brighteyes-ism
version = 0.1.0
author = Alessandro Zunino
author_email = alessandro.zunino@iit.it
url = https://github.com/VicidominiLab/brighteyes-ism
license = LGPL-3.0-only
description = A toolbox for analysing and simulating ISM images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
project_urls =
    Bug Tracker = https://github.com/VicidominiLab/brighteyes-ism/issues
    Documentation = https://github.com/VicidominiLab/brighteyes-ism#README.md
    Source Code = https://github.com/VicidominiLab/brighteyes-ism
    User Support = https://github.com/VicidominiLab/brighteyes-ism/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    scipy
    scikit-image
    scikit-learn
    matplotlib
    joblib
	poppy
    PyCustomFocus
    h5py
	statsmodels


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml
