[metadata]
name = brighteyes-ism
version = 0.1.1
author = Alessandro Zunino
author_email = alessandro.zunino@iit.it
url = https://github.com/VicidominiLab/brighteyes-ism
description = A toolbox for analysing and simulating ISM images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/VicidominiLab/brighteyes-ism/issues
    Documentation = https://github.com/VicidominiLab/brighteyes-ism#README.md
    Source Code = https://github.com/VicidominiLab/brighteyes-ism
    User Support = https://github.com/VicidominiLab/brighteyes-ism/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    scipy
    scikit-image
    scikit-learn
    matplotlib
    joblib
	poppy
    PyCustomFocus
    tqdm
    h5py
	statsmodels


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml
